--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="wrap">
             <div id="text">
 		        <div id="code">
-		      		<font color="#FF0000">  	
+		      		<font color="#000000">  	
 		      			<span class="say">亲爱的阳林芳同学：</span><br>
 						<span class="say"></span><br>
 						<span class="say">生日快乐！</span><br>
