--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@
 						<span class="say"></span><br>
 						<span class="say">生日快乐！</span><br>
 						<span class="say"></span><br>
-						<span class="say">要开心每一天呀！</span><br>
-						<span class="say"></span><br>
-						<span class="say">我爱宝宝！</span><br>
+						<span class="say">开心每一天呀！</span><br>
 						<span class="say"></span><br>
 						<span class="say">希望宝宝未来的每一个生日都会有我的陪伴！</span><br>
 						<span class="say"></span><br>
-						<span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切的！</span><br>
-						<span class="say"></span><br>
-                        <span class="say"><span class="space"></span> --- 永远爱你的宝宝</span>
+                                                <span class="say"><span class="space"></span> --- 永远爱你的宝宝</span>
 			  		</font>
 			  		</p>
       			</div>
